--- a/index.html
+++ b/index.html
@@ -7,5 +7,62 @@
     <link rel="stylesheet" href="./css/main.css" />
     <title>Product</title>
   </head>
-  <body></body>
+  <body>
+    <section class="easy__process">
+      <div class="container">
+        <h2 class="easy__title">Quick & Easy Process</h2>
+        <p class="easy__info">
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul class="easy__list">
+          <li class="easy__list-item">
+            <div class="easy__list-items-wrapper">
+              <h3 class="easy__list-item-title">
+                I can take care of your pitch
+              </h3>
+              <img
+                src="img/avator-pitch.png"
+                alt="img"
+                class="easy__list-item-img"
+              />
+            </div>
+          </li>
+          <li class="easy__list-item">
+            <div class="easy__list-items-wrapper">
+              <h3 class="easy__list-item-title">I can prototype your app</h3>
+              <img
+                src="img/avator-website.png"
+                alt="img"
+                class="easy__list-item-img"
+              />
+            </div>
+          </li>
+          <li class="easy__list-item">
+            <div class="easy__list-items-wrapper">
+              <h3 class="easy__list-item-title">I can design you website</h3>
+              <img
+                src="img/avator-marketing.png"
+                alt="img"
+                class="easy__list-item-img"
+              />
+            </div>
+          </li>
+          <li class="easy__list-item">
+            <div class="easy__list-items-wrapper">
+              <h3 class="easy__list-item-title">
+                I can help marketing strategy
+              </h3>
+              <img
+                src="img/avator-app.png"
+                alt="img"
+                class="easy__list-item-img"
+              />
+            </div>
+          </li>
+        </ul>
+        <a href="#" class="easy__list-item-link"> Contact our expert </a>
+      </div>
+    </section>
+  </body>
 </html>
