--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Product</title>
   </head>
   <body>
+    <section class="intro container">
+      <div class="intro__text-wrapper">
+        <p class="intro__title">Work at the speed of thought</p>
+        <p class="intro__description">
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience.
+        </p>
+      </div>
+      <div class="intro__links">
+        <a href="#" class="intro__started-link">Get started</a>
+        <button class="intro__watch-video">Watch the Video</button>
+      </div>
+    </section>
     <section class="easy__process">
       <div class="container">
         <h2 class="easy__title">Quick & Easy Process</h2>
