clients section added

--- a/index.html
+++ b/index.html
@@ -77,5 +77,50 @@
         <a href="#" class="easy__list-item-link"> Contact our expert </a>
       </div>
     </section>
+    <section class="clients container">
+      <p class="clients__title">What Clients Say</p>
+      <p class="clients__text">
+        Problems trying to resolve the conflict between the two major realms of
+        Classical physics: Newtonian mechanics
+      </p>
+      <ul class="clients__list">
+        <li class="clinets__list-item">
+          <img src="./assets/icons/Group 204.svg" alt="" class="item-stars" />
+          <p class="item-text">
+            Product helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+          <div class="item__div">
+            <img
+              src="./assets/images/Ellipse 2.jpg"
+              alt=""
+              class="item__div-img"
+            />
+            <div class="item__div-text-wrapper">
+              <p class="text-wrapper-author">Wahid Ari</p>
+              <p class="text-wrapper-title">Designer</p>
+            </div>
+          </div>
+        </li>
+        <li class="clinets__list-item">
+          <img src="./assets/icons/Group 204.svg" alt="" class="item-stars" />
+          <p class="item-text">
+            Product helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+          <div class="item__div">
+            <img
+              src="./assets/images/Ellipse 2.jpg"
+              alt=""
+              class="item__div-img"
+            />
+            <div class="item__div-text-wrapper">
+              <p class="text-wrapper-author">Wahid Ari</p>
+              <p class="text-wrapper-title">Designer</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
