--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
             </div>
           </div>
         </li>
+        <li class="clinets__list-item">
+          <img src="./assets/icons/Group 204.svg" alt="" class="item-stars" />
+          <p class="item-text">
+            Product helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+          <div class="item__div">
+            <img
+              src="./assets/images/Ellipse 2.jpg"
+              alt=""
+              class="item__div-img"
+            />
+            <div class="item__div-text-wrapper">
+              <p class="text-wrapper-author">Wahid Ari</p>
+              <p class="text-wrapper-title">Designer</p>
+            </div>
+          </div>
+        </li>
       </ul>
     </section>
   </body>
