--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <title>Product</title>
   </head>
   <body>
+
+    <header class="site-header container">
+
+      <img class="site-header__image" src="img/product.svg" alt="Product">
+      <p class="site-header__title">Product</p>
+
+      <nav class="site-header__navbar">
+        <ul class="site-header__list">
+          <li class="site-header__list-item">
+            <a class="site-header__link" href="#">Product</a>
+          </li>
+          <li class="site-header__list-item">
+            <a class="site-header__link" href="#">Customers</a>
+          </li>
+          <li class="site-header__list-item">
+            <a class="site-header__link" href="#">Pricing</a>
+          </li>
+          <li class="site-header__list-item">
+            <a class="site-header__link" href="#">Resources</a>
+          </li>
+         
+        </ul>
+
+      </nav>
+      <div class="site-header__wrapper">
+        <a class="site-header__sign-in" href="#">Sign in</a>
+        <a class="site-header__sign-up" href="#">Sign up</a>
+      </div>
+
+      <button class="site-header__burger">
+        <span class="site-header__burger--inner"></span>
+        <span class="visually-hidden">Menu Toggler button</span>
+      </button>
+
+      <img class="site-header__icon" src="img/black-white.svg" alt="black and white">
+    </header>
     <section class="intro container">
       <div class="intro__text-wrapper">
         <p class="intro__title">Work at the speed of thought</p>
